--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.6.2",
     "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
