--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
