--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -90,7 +90,7 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/configure-pages@v5
+        uses: actions/deploy-pages@v5
         static_site_generator: next
     token: ***
     enablement: false
