--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "next build && gh-pages -d app -b master"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -15,6 +16,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
+    "gh-pages": "^6.1.1",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.6.2",
