--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -2,16 +2,12 @@
 #
 # To get started with Next.js see: https://nextjs.org/docs/getting-started
 #
-name: new page
+name: Deploy Next.js site to Pages
 
 on:
   # Runs on pushes targeting the default branch
   push:
-<<<<<<< HEAD
-    branches: ["master9"]
-=======
     branches: ["main9"]
->>>>>>> 9c481d545398cbb925eff0e7c212ed957a927cfa
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
