--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://phamhoailinh779:Linh@cluster0.1oq8vhj.mongodb.net/blog"
+DATABASE_URL="mongodb+srv://phamhoailinh779:<Linh>@cluster0.1oq8vhj.mongodb.net/"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dfd0n3f4v"
