--- a/.env
+++ b/.env
@@ -4,8 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# DATABASE_URL="mongodb+srv://phamhoailinh779:Linh@cluster0.1oq8vhj.mongodb.net/blog"
+# DATABASE_URL="mongodb+srv://phamhoailinh779:<Linh>@cluster0.1oq8vhj.mongodb.net/"
 DATABASE_URL="mongodb+srv://phamhoailinh779:Linh@cluster0.1oq8vhj.mongodb.net/blog"
-DATABASE_URL="mongodb+srv://phamhoailinh779:<Linh>@cluster0.1oq8vhj.mongodb.net/"
+
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dfd0n3f4v"
