--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postinstall": "prisma generate"
+    "export": "next export",
+    "postinstall": "next build && prisma generate"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -19,7 +20,6 @@
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.6.2",
-    "prisma": "^5.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "prisma": "^5.16.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
