--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npx prisma generate",
+    "build": "next build",
     "start": "next start",
     "export": "next export",
-    "postinstall": "npx prisma generate"
+    "prebuild": "prisma generate"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
