--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "prebuild": "prisma generate"
+    "prebuild": "prisma generate",
+    "lint": "next lint --ignore"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -36,5 +37,11 @@
     "prisma": "^5.16.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "eslintConfig": {
+    "extends": "next",
+    "rules": {
+      "react/react-in-jsx-scope": "off"
+    }
   }
 }
