--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 # DATABASE_URL="mongodb+srv://phamhoailinh779:<Linh>@cluster0.1oq8vhj.mongodb.net/"
 DATABASE_URL="mongodb+srv://phamhoailinh779:Linh@cluster0.1oq8vhj.mongodb.net/blog"
 
-
+CLOUDINARY_URL="cloudinary://635773162255719:Rpb-1rIJvluHV78miTqwUih6tW4@dfd0n3f4v"
 
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
