--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "prebuild": "prisma generate",
+    "postinstall": "prisma generate",
     "lint": "next lint --ignore"
   },
   "dependencies": {
